Bug 88378 - CRASH (segfault) when "flip" selected for an image previously saved in .doc
Summary: CRASH (segfault) when "flip" selected for an image previously saved in .doc
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.5.2 release
Hardware: All All
: highest critical
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.5.0 target:4.3.7 target:4.3....
Keywords: bibisectRequest, regression
Depends on:
Blocks: mab4.3
  Show dependency treegraph
 
Reported: 2015-01-13 23:54 UTC by Jim Avera
Modified: 2015-12-17 08:45 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Test document (crasher.odt) (155.72 KB, application/x-vnd.oasis.opendocument.text)
2015-01-13 23:54 UTC, Jim Avera
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jim Avera 2015-01-13 23:54:07 UTC
Created attachment 112183 [details]
Test document (crasher.odt)

Applying the "flip" option to an image causes an immediate crash (exit code 139 => segfault).  The image had been previously rotated several times.

The document was originally created from scratch in LO4.4 and functioned correctly, but was saved as a .doc; when later re-opened, rotations were un-done; I re-saved as .odt, reopened that, and tried to re-rotate the image but any attempt immediately crashes.

STEPS TO REPRODUCE:

1. Open the attached crasher.odt
2. select the image (lower left corner)
3. Rightclick->image...
4. On the Image tab, check "Flip" Horizontally

RESULTS: Instant crash
Comment 1 Robinson Tryon (qubit) 2015-01-17 01:13:02 UTC
TESTING with Ubuntu 14.04 + LO 4.4.0.2

(In reply to Jim Avera from comment #0)
> STEPS TO REPRODUCE:
> 
> 1. Open the attached crasher.odt
> 2. select the image (lower left corner)
> 3. Rightclick -> "Image..."
> 4. On the Image tab, check "Flip" Horizontally

Ayup

> 
> RESULTS: Instant crash

wait for it.... (LibreOffice stayed up for just a second)
...yep, there it is!

CONFIRMED: LibreOffice does the old crasheroo

Status -> NEW
Hardware -> (Generalize)
Blocks -> MAB 4.4
Priority -> highest
Severity -> critical

Jim: Thanks for the great bug report!
Comment 2 Robinson Tryon (qubit) 2015-01-17 01:25:52 UTC
TESTING again on Ubuntu 14.04 +
LO Version: 4.5.0.0.alpha0+
Build ID: 84c69550bcb8139669de9cf98b51c35f21fe853d
TinderBox: Linux-rpm_deb-x86_64@46-TDF, 
Branch:master, 
Time: 2015-01-13_08:44:23
Locale: en_US

(In reply to Robinson Tryon (qubit) from comment #1)
> > STEPS TO REPRODUCE:
> > 
> > 1. Open the attached crasher.odt
> > 2. select the image (lower left corner)
> > 3. Rightclick -> "Image..."

In 4.5 this step is now:
(Right click) -> Format Image

> > 4. On the Image tab, check "Flip" Horizontally

> > RESULTS: Instant crash

TEST RESULTS:

4.5-master (see version above): Crash
4.2.5.2: Crash
4.2.0.1: Crash
3.5.7.2: NOREPRO - horizontal and vertical flip okay

Keywords -> regression
Whiteboard -> bibisectRequest

(4.2 Builds: In both builds tested, an empty (?) warning dialog appeared (with an "!" in a triangle), but upon closing the dialog, the program quit/crashed)

Blocks: Changing mab4.4 -> mab4.3 
(The earliest active branch on which we can reproduce)
Comment 3 Robinson Tryon (qubit) 2015-01-17 01:28:19 UTC
(In reply to Robinson Tryon (qubit) from comment #2)
>

Sorry that should read:

4.3.5.2: Crash
4.2.0.1: Crash

(4.3/4.2 Builds: In both builds tested, an empty (?) warning dialog appeared
(with an "!" in a triangle), but upon closing the dialog, the program
quit/crashed)
Comment 4 Commit Notification 2015-01-22 14:41:22 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a8835936e9d3e19443c63b7b365174254741cf76

Resolves: fdo#88378 flipping by reversing co-ord system no longer works

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2015-01-27 15:09:09 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6a3ee8e012e526004e86efa6cd71bf5079d90df8&h=libreoffice-4-3

Resolves: fdo#88378 flipping by reversing co-ord system no longer works

It will be available in 4.3.7.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2015-01-27 15:10:41 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=43d27e1df25ad3bee5790621d01b21c15249a32d&h=libreoffice-4-3-6

Resolves: fdo#88378 flipping by reversing co-ord system no longer works

It will be available in 4.3.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2015-01-27 15:11:10 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a0ef8ea968c8b395ad4247f5efebed54657cfd93&h=libreoffice-4-4

Resolves: fdo#88378 flipping by reversing co-ord system no longer works

It will be available in 4.4.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Robinson Tryon (qubit) 2015-12-17 08:45:06 UTC
Migrating Whiteboard tags to Keywords: (bibisectRequest)
[NinjaEdit]