Resolves: fdo#88378 flipping by reversing co-ord system no longer works

not entirely sure when this stopped working, but our contempory code is riddled
with asserts and throws for negative sizes so rework this to explicitly mirror
the preview rather than try the no longer working technique

Change-Id: Ie90283cad2797ab1c37848469b007dc01a2c9d75